package org.example;

public interface Estado {
    int precio(int precioPropio);
}
