package org.example;

public enum TiposPrendas {
    SACO, PANTALON, CAMISA;
}